Add observability stack, FinOps cost tracking, and Streamlit dashboard
- Rewrite monitoring/metrics.py with 12 Prometheus metrics and helper
  functions (record_tool_call, record_llm_call, record_rag_query,
  record_analysis_complete)
- Implement CostTracker in monitoring/finops.py with per-incident and
  aggregate cost tracking
- Enhance DecisionTracer with duration_ms, result export, and
  export_trace_for_dashboard()
- Add structured logging config (monitoring/logging.py) with JSON/console
  renderers
- Instrument tool registry, RAG engine, all three agents, and orchestrator
  with metric recording
- Build Streamlit dashboard (dashboard/app.py) with three tabs: Incident
  Analysis, Decision Trace, and Analytics
- Add Prometheus scrape config, Grafana datasource/dashboard provisioning,
  and 8-panel Grafana dashboard JSON
- Rewrite docker-compose.yml with api, chromadb, prometheus, grafana
  services
- Update Dockerfile with runbook pre-ingestion build step
- Add 13 new tests covering metrics, CostTracker, tracer enhancements,
  and logging (58/58 pass)
- Add make dashboard target to Makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
 services:
-  sentinel:
+  api:
     build: .
     ports:
       - "8000:8000"
     env_file:
       - .env
-    volumes:
-      - ./chroma_data:/app/chroma_data
-      - ./runbooks:/app/runbooks
+    depends_on:
+      - chromadb
+      - prometheus
 
-  dashboard:
-    build: .
-    command: streamlit run dashboard/app.py --server.port 8501 --server.address 0.0.0.0
+  chromadb:
+    image: chromadb/chroma:latest
     ports:
-      - "8501:8501"
-    env_file:
-      - .env
+      - "8001:8000"
+    volumes:
+      - chroma_data:/chroma/chroma
 
   prometheus:
     image: prom/prometheus:latest
@@ -28,5 +27,12 @@ services:
     image: grafana/grafana:latest
     ports:
       - "3000:3000"
+    volumes:
+      - ./monitoring/grafana/:/etc/grafana/provisioning/
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=sentinel
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
+
+volumes:
+  chroma_data:
