--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_call:
 
 jobs:
   lint-and-test:
@@ -24,7 +25,7 @@ jobs:
         run: ruff check .
 
       - name: Type check
-        run: mypy agent/ rag/ tools/ protocols/ api/ monitoring/ --ignore-missing-imports
+        run: mypy agent/ rag/ tools/ protocols/ api/ monitoring/ evaluation/ --ignore-missing-imports
 
       - name: Test with coverage
         run: pytest -v --tb=short --cov=agent --cov=tools --cov=rag --cov=monitoring --cov-report=term-missing --cov-fail-under=80
