--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["agent", "rag", "tools", "protocols", "api", "dashboard", "monitoring"]
+packages = ["agent", "rag", "tools", "protocols", "api", "dashboard", "monitoring", "evaluation"]
 
 [tool.ruff]
 target-version = "py311"
