--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "httpx>=0.27.0",
     "streamlit>=1.39.0",
     "mcp>=1.0.0",
+    "boto3>=1.35.0",
 ]
 
 [project.optional-dependencies]
